# thorvald_hilly_nav

./: CMakeLists.txt  README.md  apple_fields_remote.yaml  custom_rviz.rviz  package.xml
config/: robot_vignesh_010.yaml
include/: orchards_hilly_nav.h  orchards_hilly_nav_offline.h
launch/: .IBVS.launch.swp  IBVS.launch  guidance.launch  heightmap.launch  realsense_camera.launch
models/heightmap/: drøbak.dae  drøbak.png.aux.xml  heightmap.dae  heightmap_n.dae  model.config  model.sdf  model_dae.sdf  model_png.sdf
models/heightmap/materials/scripts/: grass_ground_plane.material  heightmap_dirt.material  heightmap_grass.material  heightmap_ground.material  heightmap_sand.material  heightmap_terrain.material
models/heightmap/materials/textures/: apple_orchards.tif  drøbak.tif
params/: thorvald_hilly_nav_run.yaml
rviz/: custom_rviz.rviz
scripts/: da_predict.py  online_da_predict.py  online_segmentation.py  segmentation.py  sliding_window_approach.py
src/: BOR_node_test.cpp  orchards_hilly_nav.cpp  orchards_hilly_nav_offline.cpp
urdf/: sensors_sim.xacro
worlds/: drøbak.world  drøbak_latest_plants.world  drøbak_plants.world  drøbak_png.world  heightmap.world  heightmap_thorvald.world
